@@ -9,9 +9,14 @@ fai (3.2.12) unstable; urgency=low
     (closes: #500823)
   * lib/setup-storage/Volumes.pm: Handle new error message in case of
     missing disk label (closes: #500823)
+  * setup-storage: extended debug output of sorted commands
+    (closes: #500822)
+  * setup-storage/Commands.pm: Properly sort commands, fixed dependency
+    errors, use start_byte for new config instead of begin_byte
+    (closes: #500822) 
   * make-fai-nfsroot: print version of debootstrap (closes: #500046)
 
- -- Thomas Lange <lange@debian.org>  Tue, 14 Oct 2008 15:31:55 +0200
+ -- Thomas Lange <lange@debian.org>  Tue, 14 Oct 2008 15:35:06 +0200
 
 fai (3.2.11) unstable; urgency=low
 
